# sgs

./: Cargo.toml  flake.nix  install.sh  readme.md  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6pqdxc63dbga4iap9ll7jzaniwph6kk9-source
.github/: dependabot.yml
crates/sgs/: Cargo.toml
crates/sgs/src/: app.rs  css.rs  hyprland.rs  ipc.rs  lua.rs  main.rs  render.rs  system.rs  widget.rs  window.rs
crates/sgsctl/: Cargo.toml
crates/sgsctl/src/: main.rs
sgs/: style.css
sgs/modern/: init.lua  install.sh  style.css
sgs/retro/: init.lua  style.css
